removed concurrent.ExerciseTwo class and enablePreview setting