@@ -31,17 +31,6 @@ test {
     useJUnitPlatform()
 }
 
-tasks.withType(JavaCompile).configureEach {
-    options.compilerArgs += '--enable-preview'
-}
-
-tasks.withType(Test).configureEach {
-    jvmArgs += '--enable-preview'
-}
-
-tasks.withType(JavaExec).configureEach {
-    jvmArgs += '--enable-preview'
-}
 
 tasks {
     run {
